--- a/src/main/resources/com/rideshare/home.fxml
+++ b/src/main/resources/com/rideshare/home.fxml
@@ -1,48 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="599.0" prefWidth="906.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rideshare.GameManager.GameController">
+<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rideshare.GameManager.GameController">
    <children>
-      <ImageView fitHeight="674.0" fitWidth="915.0" layoutX="-5.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/bg/home.png" />
-         </image>
-      </ImageView>
-      <Text layoutX="270.0" layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pedal &amp; Post">
-         <font>
-            <Font name="Lucida Grande Bold" size="57.0" />
-         </font>
-      </Text>
-      <Text layoutX="274.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sustainable Delivery Adventure">
-         <font>
-            <Font name="Lucida Grande" size="24.0" />
-         </font>
-      </Text>
-      <Button fx:id="newGameButton" defaultButton="true" layoutX="387.0" layoutY="249.0" mnemonicParsing="false" onAction="#start" style="-fx-background-color: #ec7113; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="New Game">
-         <font>
-            <Font name="Lucida Grande" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="loadGameButton" layoutX="387.0" layoutY="320.0" mnemonicParsing="false" style="-fx-background-color: #118CEE; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="Load Game">
-         <font>
-            <Font name="Lucida Grande" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="instructionsButton" layoutX="385.0" layoutY="403.0" mnemonicParsing="false" style="-fx-background-color: #118CEE; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="Instructions">
-         <font>
-            <Font name="Lucida Grande" size="13.0" />
-         </font>
-      </Button>
-      <Button fx:id="startGameButton" layoutX="385.0" layoutY="475.0" mnemonicParsing="false" style="-fx-background-color: #118CEE; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="Start Game">
-         <font>
-            <Font name="Lucida Grande" size="13.0" />
-         </font>
-      </Button>
+      <StackPane prefHeight="414.0" prefWidth="444.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pedal &amp; Post" StackPane.alignment="CENTER">
+               <font>
+                  <Font name="Lucida Grande Bold" size="57.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sustainable Delivery Adventure" StackPane.alignment="CENTER">
+               <font>
+                  <Font name="Lucida Grande" size="24.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets top="79.0" />
+               </StackPane.margin>
+            </Text>
+            <Button fx:id="newGameButton" defaultButton="true" mnemonicParsing="false" onAction="#handleNewGameButtonPressed" style="-fx-background-color: #ec7113; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="New Game" StackPane.alignment="CENTER">
+               <font>
+                  <Font name="Lucida Grande" size="13.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets right="150.0" top="200.0" />
+               </StackPane.margin>
+            </Button>
+            <Button fx:id="loadGameButton" mnemonicParsing="false" onAction="#handleLoadButtonPressed" style="-fx-background-color: #118CEE; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="Load Game" StackPane.alignment="CENTER">
+               <font>
+                  <Font name="Lucida Grande" size="13.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets right="-150.0" top="200.0" />
+               </StackPane.margin>
+            </Button>
+            <Button fx:id="instructionsButton" mnemonicParsing="false" onAction="#handleInstructionsButtonPressed" style="-fx-background-color: #118CEE; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="Instructions" StackPane.alignment="BOTTOM_RIGHT">
+               <font>
+                  <Font name="Lucida Grande" size="13.0" />
+               </font>
+            </Button>
+            <Button fx:id="startGameButton" mnemonicParsing="false" onAction="#handleStartButtonPressed" style="-fx-background-color: #118CEE; -fx-padding: 14px; -fx-font-size: 20px; -fx-border-color: #138EEC; -fx-border-width: 2px;" text="Start Game">
+               <font>
+                  <Font name="Lucida Grande" size="13.0" />
+               </font>
+               <StackPane.margin>
+                  <Insets top="350.0" />
+               </StackPane.margin>
+            </Button>
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
