--- a/src/main/resources/com/rideshare/newLoad.fxml
+++ b/src/main/resources/com/rideshare/newLoad.fxml
@@ -1,20 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="newLoadGameModal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="newLoadGameModal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="907.0" prefWidth="1502.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rideshare.Controllers.NewLoadController">
    <children>
-      <Button id="newGameButton" fx:id="newGameButton" layoutX="130.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleNewGameButtonPressed" text="New Game ">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Button>
-      <Button fx:id="loadGameButton" layoutX="337.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleLoadButtonPressed" text="Load Game">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Button>
+      <ImageView fitHeight="1002.0" fitWidth="1638.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/bg/home-2.png" />
+         </image>
+      </ImageView>
+      <AnchorPane layoutX="636.0" layoutY="361.0">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/ui/green_button04.png" />
+               </image>
+            </ImageView>
+            <Text fill="WHITE" layoutX="11.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Game">
+               <font>
+                  <Font name="Futura Bold" size="29.0" />
+               </font>
+            </Text>
+            <Button fx:id="newGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleNewGameButtonPressed" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="636.0" layoutY="449.0">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../images/ui/green_button04.png" />
+               </image>
+            </ImageView>
+            <Text fill="WHITE" layoutX="10.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Load Game" wrappingWidth="179.62600708007812">
+               <font>
+                  <Font name="Futura Bold" size="29.0" />
+               </font>
+            </Text>
+            <Button fx:id="loadGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleLoadButtonPressed" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
