--- a/src/main/resources/com/rideshare/chooseCharacter.fxml
+++ b/src/main/resources/com/rideshare/chooseCharacter.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -26,17 +27,17 @@
                   <Image url="@../../images/ui/grey_panel.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="193.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="spritePreview" fx:id="spritePreview" fitHeight="75.0" fitWidth="75.0" layoutX="193.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../images/sprites/girl-1/down-2.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="51.0" fitWidth="48.0" layoutX="379.0" layoutY="152.0" pickOnBounds="true">
+            <ImageView id="rightButton" fx:id="rightButton" fitHeight="51.0" fitWidth="48.0" layoutX="379.0" layoutY="152.0" onMouseClicked="#onRightButtonClicked" pickOnBounds="true">
                <image>
                   <Image url="@../../images/ui/red_sliderRight.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="51.0" fitWidth="48.0" layoutX="27.0" layoutY="151.0" pickOnBounds="true">
+            <ImageView fx:id="leftButton" fitHeight="51.0" fitWidth="48.0" layoutX="27.0" layoutY="151.0" onMouseClicked="#onLeftButtonClicked" pickOnBounds="true">
                <image>
                   <Image url="@../../images/ui/red_sliderLeft.png" />
                </image>
@@ -46,12 +47,23 @@
                   <Font name="Futura Bold" size="24.0" />
                </font>
             </Text>
-            <TextField layoutX="176.0" layoutY="282.0" prefHeight="27.0" prefWidth="110.0" promptText="ENTER NAME">
+            <TextField fx:id="nameInput" layoutX="176.0" layoutY="282.0" prefHeight="27.0" prefWidth="110.0" promptText="ENTER NAME">
                <font>
                   <Font name="Futura Bold" size="13.0" />
                </font>
             </TextField>
          </children>
       </AnchorPane>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="582.0" layoutY="685.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/ui/green_button00.png" />
+         </image>
+      </ImageView>
+      <Text fill="WHITE" layoutX="651.0" layoutY="718.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start">
+         <font>
+            <Font name="Futura Bold" size="24.0" />
+         </font>
+      </Text>
+      <Button fx:id="startButton" layoutX="581.0" layoutY="683.0" mnemonicParsing="false" onAction="#onStartButtonClicked" opacity="0.0" prefHeight="51.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
