--- a/src/main/resources/com/rideshare/home.fxml
+++ b/src/main/resources/com/rideshare/home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
@@ -10,14 +11,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="527.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rideshare.Controllers.HomeController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="751.0" prefWidth="723.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rideshare.Controllers.HomeController">
    <children>
-      <ImageView fitHeight="414.0" fitWidth="732.0" layoutX="-10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="754.0" fitWidth="793.0" layoutX="-17.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../images/bg/home-2.png" />
+            <Image url="@../../images/bg/home-3.jpeg" />
          </image>
       </ImageView>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="182.0" layoutX="147.0" layoutY="92.0" stroke="WHITE" strokeWidth="6.0" width="428.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="182.0" layoutX="146.0" layoutY="147.0" stroke="WHITE" strokeWidth="6.0" width="428.0">
          <effect>
             <Shadow>
                <color>
@@ -26,61 +27,59 @@
             </Shadow>
          </effect>
       </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="176.0" layoutX="153.0" layoutY="89.0" stroke="WHITE" strokeWidth="6.0" width="416.0" />
-      <Text fill="WHITE" layoutX="166.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pedal &amp; Post">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff" height="176.0" layoutX="152.0" layoutY="144.0" stroke="WHITE" strokeWidth="6.0" width="416.0" />
+      <Text fill="WHITE" layoutX="165.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pedal &amp; Post">
          <font>
             <Font name="Futura Bold" size="57.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="181.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sustainable Delivery Adventure">
+      <Text fill="WHITE" layoutX="180.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sustainable Delivery Adventure">
          <font>
             <Font name="Lucida Grande" size="24.0" />
          </font>
       </Text>
-      <AnchorPane layoutX="658.0" layoutY="349.0">
-         <children>
-            <ImageView fitHeight="56.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/ui/green_circle.png" />
-               </image>
-            </ImageView>
-            <Text fill="WHITE" layoutX="19.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="?">
-               <font>
-                  <Font name="Futura Bold" size="29.0" />
-               </font>
-            </Text>
-            <Button fx:id="instructionsButton" layoutX="1.0" layoutY="3.0" mnemonicParsing="false" onAction="#handleInstructionsButtonPressed" prefHeight="56.0" prefWidth="56.0" style="-fx-background-color: transparent;" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="261.0" layoutY="284.0">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/ui/green_button04.png" />
-               </image>
-            </ImageView>
-            <Text fill="WHITE" layoutX="63.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start">
-               <font>
-                  <Font name="Futura Bold" size="29.0" />
-               </font>
-            </Text>
-            <Button fx:id="startGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleStartButtonPressed" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="658.0" layoutY="282.0">
-         <children>
-            <ImageView fitHeight="56.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/ui/green_circle.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="4.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/ui/sound_off.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="muteButton" layoutX="-3.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleMuteButtonPressed" prefHeight="60.0" prefWidth="74.0" style="-fx-background-color: transparent;" />
-         </children>
-      </AnchorPane>
+      <AnchorPane layoutX="658.0" layoutY="349.0" />
+      <AnchorPane layoutX="261.0" layoutY="284.0" />
+      <AnchorPane layoutX="658.0" layoutY="282.0" />
+      <Text fill="WHITE" layoutX="528.0" layoutY="681.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start">
+         <font>
+            <Font name="Futura Bold" size="29.0" />
+         </font>
+      </Text>
+      <Button fx:id="startGameButton" layoutX="441.0" layoutY="640.0" mnemonicParsing="false" onAction="#handleStartButtonPressed" prefHeight="60.0" prefWidth="249.0" style="-fx-background-color: transparent;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <ImageView fitHeight="56.0" fitWidth="60.0" layoutX="67.0" layoutY="689.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/ui/yellow_circle.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="71.0" layoutY="685.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/ui/sound_off.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="muteButton" layoutX="64.0" layoutY="687.0" mnemonicParsing="false" onAction="#handleMuteButtonPressed" prefHeight="60.0" prefWidth="74.0" style="-fx-background-color: transparent;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <ImageView fitHeight="56.0" fitWidth="60.0" layoutX="6.0" layoutY="689.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/ui/yellow_circle.png" />
+         </image>
+      </ImageView>
+      <Text fill="WHITE" layoutX="25.0" layoutY="728.0" strokeType="OUTSIDE" strokeWidth="0.0" text="?">
+         <font>
+            <Font name="Futura Bold" size="29.0" />
+         </font>
+      </Text>
+      <Button fx:id="instructionsButton" layoutX="7.0" layoutY="692.0" mnemonicParsing="false" onAction="#handleInstructionsButtonPressed" prefHeight="56.0" prefWidth="56.0" style="-fx-background-color: transparent;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
