--- a/src/main/resources/com/rideshare/newLoad.fxml
+++ b/src/main/resources/com/rideshare/newLoad.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,39 +10,47 @@
 
 <AnchorPane id="newLoadGameModal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="907.0" prefWidth="1502.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rideshare.Controllers.NewLoadController">
    <children>
-      <ImageView fitHeight="1002.0" fitWidth="1638.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="1522.0" fitWidth="2090.0" layoutX="-18.0" layoutY="-328.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../images/bg/home-2.png" />
+            <Image url="@../../images/bg/home-3.jpeg" />
          </image>
       </ImageView>
-      <AnchorPane layoutX="636.0" layoutY="361.0">
+      <AnchorPane layoutX="529.0" layoutY="346.0" prefHeight="84.0" prefWidth="352.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="82.0" fitWidth="361.0" pickOnBounds="true">
                <image>
-                  <Image url="@../../images/ui/green_button04.png" />
+                  <Image url="@../../images/ui/red_button04.png" />
                </image>
             </ImageView>
-            <Text fill="WHITE" layoutX="11.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Game">
+            <Text fill="WHITE" layoutX="50.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Game" wrappingWidth="270.7500000000001">
                <font>
-                  <Font name="Futura Bold" size="29.0" />
+                  <Font name="Futura Bold" size="40.0" />
                </font>
             </Text>
-            <Button fx:id="newGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleNewGameButtonPressed" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
+            <Button fx:id="newGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleNewGameButtonPressed" prefHeight="82.0" prefWidth="364.0" style="-fx-background-color: transparent;">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="636.0" layoutY="449.0">
+      <AnchorPane layoutX="531.0" layoutY="437.0" prefHeight="72.0" prefWidth="273.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="82.0" fitWidth="361.0" pickOnBounds="true">
                <image>
-                  <Image url="@../../images/ui/green_button04.png" />
+                  <Image url="@../../images/ui/red_button04.png" />
                </image>
             </ImageView>
-            <Text fill="WHITE" layoutX="10.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Load Game" wrappingWidth="179.62600708007812">
+            <Text fill="WHITE" layoutX="47.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Load Game" wrappingWidth="270.7500000000001">
                <font>
-                  <Font name="Futura Bold" size="29.0" />
+                  <Font name="Futura Bold" size="40.0" />
                </font>
             </Text>
-            <Button fx:id="loadGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleLoadButtonPressed" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
+            <Button fx:id="loadGameButton" layoutY="2.0" mnemonicParsing="false" onAction="#handleLoadButtonPressed" prefHeight="80.0" prefWidth="364.0" style="-fx-background-color: transparent;">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
    </children>
